icondir=${datadir}/icons/hicolor/22x22/status
icon_DATA = \
		nm-device-wired-status.png \
		nm-device-wwan-status.png \
		nm-mb-roam-status.png \
		nm-no-connection-status.png \
		nm-signal-00-status.png \
		nm-signal-100-status.png \
		nm-signal-25-status.png \
		nm-signal-50-status.png \
		nm-signal-75-status.png \
		nm-stage01-connecting01-status.png \
		nm-stage01-connecting02-status.png \
		nm-stage01-connecting03-status.png \
		nm-stage01-connecting04-status.png \
		nm-stage01-connecting05-status.png \
		nm-stage01-connecting06-status.png \
		nm-stage01-connecting07-status.png \
		nm-stage01-connecting08-status.png \
		nm-stage01-connecting09-status.png \
		nm-stage01-connecting10-status.png \
		nm-stage01-connecting11-status.png \
		nm-stage02-connecting01-status.png \
		nm-stage02-connecting02-status.png \
		nm-stage02-connecting03-status.png \
		nm-stage02-connecting04-status.png \
		nm-stage02-connecting05-status.png \
		nm-stage02-connecting06-status.png \
		nm-stage02-connecting07-status.png \
		nm-stage02-connecting08-status.png \
		nm-stage02-connecting09-status.png \
		nm-stage02-connecting10-status.png \
		nm-stage02-connecting11-status.png \
		nm-stage03-connecting01-status.png \
		nm-stage03-connecting02-status.png \
		nm-stage03-connecting03-status.png \
		nm-stage03-connecting04-status.png \
		nm-stage03-connecting05-status.png \
		nm-stage03-connecting06-status.png \
		nm-stage03-connecting07-status.png \
		nm-stage03-connecting08-status.png \
		nm-stage03-connecting09-status.png \
		nm-stage03-connecting10-status.png \
		nm-stage03-connecting11-status.png \
		nm-tech-cdma-1x-status.png \
		nm-tech-edge-status.png \
		nm-tech-evdo-status.png \
		nm-tech-gprs-status.png \
		nm-tech-hspa-status.png \
		nm-tech-umts-status.png \
		nm-vpn-active-lock-status.png \
		nm-vpn-connecting01-status.png \
		nm-vpn-connecting02-status.png \
		nm-vpn-connecting03-status.png \
		nm-vpn-connecting04-status.png \
		nm-vpn-connecting05-status.png \
		nm-vpn-connecting06-status.png \
		nm-vpn-connecting07-status.png \
		nm-vpn-connecting08-status.png \
		nm-vpn-connecting09-status.png \
		nm-vpn-connecting10-status.png \
		nm-vpn-connecting11-status.png \
		nm-vpn-connecting12-status.png \
		nm-vpn-connecting13-status.png \
		nm-vpn-connecting14-status.png \
		nm-wwan-tower-status.png

EXTRA_DIST = $(icon_DATA)

