icondir=${datadir}/icons/hicolor/22x22/status
icon_DATA = \
		nm-device-wired-status.png \
		nm-device-wwan-status.png \
		nm-mb-roam-status.png \
		nm-no-connection-status.png \
		nm-signal-00-status.png \
		nm-signal-100-status.png \
		nm-signal-25-status.png \
		nm-signal-50-status.png \
		nm-signal-75-status.png \
		nm-tech-cdma-1x-status.png \
		nm-tech-edge-status.png \
		nm-tech-evdo-status.png \
		nm-tech-gprs-status.png \
		nm-tech-hspa-status.png \
		nm-tech-umts-status.png \
		nm-vpn-active-lock-status.png \
		nm-vpn-connecting01-status.png \
		nm-vpn-connecting02-status.png \
		nm-vpn-connecting03-status.png \
		nm-vpn-connecting04-status.png \
		nm-vpn-connecting05-status.png \
		nm-vpn-connecting06-status.png \
		nm-vpn-connecting07-status.png \
		nm-vpn-connecting08-status.png \
		nm-vpn-connecting09-status.png \
		nm-vpn-connecting10-status.png \
		nm-vpn-connecting11-status.png \
		nm-vpn-connecting12-status.png \
		nm-vpn-connecting13-status.png \
		nm-vpn-connecting14-status.png \
		nm-wwan-tower-status.png

EXTRA_DIST = $(icon_DATA)

