deps = [
  gtk_dep,
  libnm_dep,
  libnma_dep
]

executable(
  'cert-chooser',
  'cert-chooser.c',
  include_directories: incs,
  dependencies: deps,
  c_args: cflags,
  install: false
)

executable(
  'mobile-wizard',
  'mobile-wizard.c',
  include_directories: incs,
  dependencies: deps,
  c_args: cflags,
  install: false
)

executable(
  'run-vpn',
  'run-vpn.c',
  include_directories: incs,
  dependencies: deps,
  c_args: cflags,
  install: false
)

executable(
  'vpn-password-dialog',
  'vpn-password-dialog.c',
  include_directories: incs,
  dependencies: deps,
  c_args: cflags,
  install: false
)

executable(
  'wifi-dialog',
  'wifi-dialog.c',
  include_directories: incs,
  dependencies: deps,
  c_args: cflags,
  install: false
)

executable(
  'wifi-dialog-secrets',
  'wifi-dialog-secrets.c',
  include_directories: incs,
  dependencies: deps,
  c_args: cflags,
  install: false
)
